Fix visibility on expansion to affect only selected side.

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1 {
 p {
     justify-self: center;
     align-self: center;
+    font-size: 0.8em;
 }
 
 .container {
